 * GolangDoc: Lookup Api Help (F1)
 * GolangDoc: Jump to Declaration (F2)
 * GolangDoc: lookup all GOPATH pkg api
 * LiteApp: fix editor navigate 
 * LiteEditor : add action Move to New Windows
 * LiteFind : focus in find text and enter
 * LiteEditor: fix code compelter func test ()
 * GolangCode : auto restart gocode if liteide GOPATH changed
 * GolanPlay: enable gocode and fmt
 * LiteBuild : fix build config custom view
 * LiteBuild : BUILDARGS / INSTALLARGS support set 
		example -gcflags "-N -l" for debug
		example -ldflags "-s" for release
 * remove: Makefile plugin , Profile plugin, x64 Project
==== 2012.10.10 Ver x13.2 ====
 * GolangCode : the best support for gocode
 * LiteApp : add editor tab context menu
 * LiteApp : update view menu
 * LiteApp : fix check modify and save
 * GolangFmt : fix fmt editor style restore
 * GolangDoc : fix go/doc/*.html parser meta "Path="
 * GolangAst : fix update model style restore
 * Welcome : update page
 * LiteEnv : edit enviroment action
 * LiteBuild : update gosrc.xml
 * LiteBuild : fix double click goto line regexp 
 * LiteBuild : show enviroment go env
 * LiteBuild : execute error use red font
 * LiteEditor : color theme set currnet line background
 * LiteEditor : add color theme darktango.xml(Dumitru Ungureanu)
 * LiteEditor : go wordapi update, keyword types and funcs
 * LiteEditor : code compelter func auto append ()
 * LiteEditor : fix tab indent
 * FileSystem : fix execute find path
 * LiteFind : fix current directory 
==== 2012.9.24 Ver x13.1 ====
 * LiteBuild : fix build load crash.
 * LiteApp : fix double click error output regexp
 * LiteApp : fix folder drop to liteide
 * LiteDebug : watch vars load /save by project
 * LiteDebug : breakpoint load /save by file
 * LiteDebug : add remove all breakpoint action
 * LiteDebug : add / remove global or local watch point
 * LiteEditor : optimization editor mark
 * LiteEditor : enable drop text
 * GolangPlay : enable gofmt
==== 2012.9.21 Ver x13 ====