@@ -488,10 +488,6 @@ In addition, as a special exception, that plugins developed for LiteIDE, are all
         <translation>エディタと同期</translation>
     </message>
     <message>
-        <source>open to parent</source>
-        <translation type="obsolete">親を開く</translation>
-    </message>
-    <message>
         <location filename="src/plugins/filebrowser/filebrowser.cpp" line="193"/>
         <source>Open File</source>
         <translation>ファイルを開く</translation>
@@ -1126,7 +1122,12 @@ This file has been modified outside of the liteide. Do you want to reload it?</s
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location filename="src/plugins/golangfmt/golangfmtoption.ui" line="42"/>
+        <location filename="src/plugins/golangfmt/golangfmtoption.ui" line="40"/>
+        <source>Auto popup gofmt error message</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location filename="src/plugins/golangfmt/golangfmtoption.ui" line="49"/>
         <source>Process TimeOut( &gt; 50ms ):</source>
         <oldsource>Process TimeOut( &gt; 10ms ):</oldsource>
         <translation type="unfinished"></translation>
@@ -1779,25 +1780,6 @@ This file has been modified outside of the liteide. Do you want to reload it?</s
     </message>
 </context>
 <context>
-    <name>MakefileFile</name>
-    <message>
-        <source>GOFILES</source>
-        <translation type="obsolete">GOFILES</translation>
-    </message>
-    <message>
-        <source>CGOFILES</source>
-        <translation type="obsolete">CGOFILES</translation>
-    </message>
-    <message>
-        <source>Headers</source>
-        <translation type="obsolete">ヘッダ</translation>
-    </message>
-    <message>
-        <source>Sources</source>
-        <translation type="obsolete">ソース</translation>
-    </message>
-</context>
-<context>
     <name>NewFileDialog</name>
     <message>
         <location filename="src/liteapp/newfiledialog.ui" line="14"/>
@@ -2032,25 +2014,6 @@ This file has been modified outside of the liteide. Do you want to reload it?</s
         <location filename="src/liteapp/pluginsdialog.cpp" line="57"/>
         <source>FileName</source>
         <translation type="unfinished">ファイル名</translation>
-    </message>
-</context>
-<context>
-    <name>ProfileFile</name>
-    <message>
-        <source>GOFILES</source>
-        <translation type="obsolete">GOFILES</translation>
-    </message>
-    <message>
-        <source>CGOFILES</source>
-        <translation type="obsolete">CGOFILES</translation>
-    </message>
-    <message>
-        <source>Headers</source>
-        <translation type="obsolete">ヘッダ</translation>
-    </message>
-    <message>
-        <source>Sources</source>
-        <translation type="obsolete">ソース</translation>
     </message>
 </context>
 <context>
